--- a/style.css
+++ b/style.css
@@ -10,3 +10,14 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
+/*Styles for Homepage secondary breaker*/
+.breaker {
+	background-color: #00529b;
+	background-image: none;
+	padding: 100px 0;
+}
+
+.breaker p {
+	line-height: 28px;
+	margin-bottom: 15px;
+}
