--- a/style.css
+++ b/style.css
@@ -38,3 +38,104 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 	margin: 60px 0 20px;
 	line-height: 43px;
 }
+
+/*Styles for Student Page*/
+.timeline-display-wrapper {
+	background-color: #00529b;
+	padding: 70px 0;
+	margin-bottom: 50px;
+}
+
+.timeline-line {
+	position: relative;
+}
+
+.timeline-line:before {
+	content: '';
+	position: absolute;
+	top: 50%;
+	left: 40px;
+	border-top: 10px solid #E47426;
+	background: #E47426;
+	width: 85%;
+	transform: translateY(-50%);
+}
+
+.timeline-wrap {
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+}
+
+.timeline-box {
+	height: auto;
+	width: 300px;
+	background-color: #fff;
+	padding:17px;
+	text-align:center;
+	line-height: 28px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.timeline-box h2 {
+	font-size:24px;
+	line-height:28px;
+}
+
+.timeline-box h3 {
+	color: #E47426;
+	font-size: 60px !important;
+	padding: 7px 0;
+}
+
+.timeline-box p {
+	font-size:18px;
+	line-height:28px;
+}
+
+@media (min-width: 992px){
+	.timeline-display-wrapper {
+		margin-bottom:100px;
+		padding:100px 0;
+	}
+	.timeline-box { 
+		padding:25px;
+	}
+}
+
+@media (max-width: 991px){
+	.timeline-box {
+		width: 200px;
+	}
+	.timeline-box h3 {
+		font-size: 41px !important;
+	}
+}
+
+@media (max-width: 670px){
+	.timeline-line:before {
+		top: 40px;
+		left: 50%;
+		border-top: none;
+		background: #E47426;
+		width: 10px;
+		height: 400px;
+		transform: translateX(-50%);
+	}
+	.timeline-wrap {
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+	}
+	.timeline-box {
+		width: auto;
+		margin: 10px 0;
+	}
+	.timeline-box br {
+		display: none;
+	}
+}
