--- a/style.css
+++ b/style.css
@@ -306,8 +306,13 @@ ul li, ol li {
 	white-space: nowrap;
 }
 
-.sponsorship-levels-table td.column-2, .sponsorship-levels-table td.column-3 {
+.sponsorship-levels-table td.column-2, .sponsorship-levels-table td.column-3, .sponsorship-levels-table td.column-4 {
 	color: #008000;
+	text-align: center;
+}
+
+.sponsorship-levels-table th.column-2, .sponsorship-levels-table th.column-3, .sponsorship-levels-table th.column-4 {
+	text-align: center;
 }
 
 .tablepress tfoot th {
